--- a/style.css
+++ b/style.css
@@ -312,6 +312,9 @@
 .logo{
     display: flex;
 }
+.logo>img{
+    background-color: white;
+}
 .logo>h3{
     margin-bottom: 0px;
 }
@@ -379,6 +382,10 @@
     }
     .section1{
         display: none;
+    }
+    .img-container{
+        grid-template-columns: repeat(1, 1fr);
+
     }
     .footer-content{
         grid-template-columns: repeat(1, 1fr);
