--- a/style.css
+++ b/style.css
@@ -172,6 +172,9 @@
     gap: 5px;
     margin-top: 50px;
 }
+.container :hover{
+    background-color: #5D58EF;
+}
 .circle{
     width: 50px;
     height: 50px;
